Adjusted scrollbar width and fixed issue with dropdown closing when clicking scroll bar

--- a/src/EventLogExpert/wwwroot/css/app.css
+++ b/src/EventLogExpert/wwwroot/css/app.css
@@ -25,7 +25,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 7px;
     background: var(--background-darkgray);
 }
 
